<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/et_surname"
        android:layout_width="290dp"
        android:layout_height="40dp"
        android:layout_marginTop="100dp"
        android:ems="10"
        android:hint="@string/surname"
        android:inputType="textPersonName"
        android:textColor="#575656"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_name"
        android:layout_width="290dp"
        android:layout_height="40dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:textColor="#575656"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_surname" />

    <EditText
        android:id="@+id/et_age"
        android:layout_width="290dp"
        android:layout_height="40dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/age"
        android:inputType="number"
        android:textColor="#575656"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_patronymic" />

    <EditText
        android:id="@+id/et_patronymic"
        android:layout_width="290dp"
        android:layout_height="40dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/patronymic"
        android:inputType="textPersonName"
        android:textColor="#575656"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_name" />

    <Button
        android:id="@+id/bt_pressure_recording"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_marginBottom="64dp"
        android:background="@android:drawable/toast_frame"
        android:backgroundTint="#33ADC2"
        android:fontFamily="sans-serif"
        android:text="@string/pressure_recording"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:typeface="sans"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.225"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/bt_vital_record"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_marginBottom="64dp"
        android:background="@android:drawable/toast_frame"
        android:backgroundTint="#33ADC2"
        android:fontFamily="sans-serif"
        android:text="@string/vital_record"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:typeface="sans"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.771"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/bt_save_user"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="290dp"
        android:layout_height="65dp"
        android:layout_marginTop="16dp"
        android:background="@android:drawable/toast_frame"
        android:backgroundTint="#33ADC2"
        android:fontFamily="sans-serif"
        android:text="@string/save"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:typeface="sans"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_age" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/heart" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="249dp"
        android:layout_height="61dp"
        android:layout_marginTop="5dp"
        android:text="@string/health_monitoring"
        android:textColor="#33ADC2"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.140"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="62dp"
        android:layout_height="11dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        android:text="Marakina G.V."
        android:textColor="#575656"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>