<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PressureRecording">

    <EditText
        android:id="@+id/et_top_pressure"
        android:layout_width="290dp"
        android:layout_height="0dp"
        android:layout_marginTop="76dp"
        android:layout_marginBottom="12dp"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/top_pressure"
        android:textColor="#575656"
        app:layout_constraintBottom_toTopOf="@+id/et_lower_pressure"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_lower_pressure"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="12dp"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/lower_pressure"
        android:textColor="#575656"
        app:layout_constraintBottom_toTopOf="@+id/et_pulse"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_top_pressure" />

    <EditText
        android:id="@+id/et_pulse"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="13dp"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/pulse"
        android:textColor="#575656"
        app:layout_constraintBottom_toTopOf="@+id/cb_tachycardia"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_lower_pressure" />

    <CheckBox
        android:id="@+id/cb_tachycardia"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="12dp"
        android:checked="false"
        android:text="@string/tachycardia"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_pulse" />

    <EditText
        android:id="@+id/date"
        android:layout_width="140dp"
        android:layout_height="40dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="ДД.MM.ГГ"
        android:inputType="date"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cb_tachycardia" />

    <EditText
        android:id="@+id/time"
        android:layout_width="140dp"
        android:layout_height="40dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="278dp"
        android:ems="10"
        android:hint="00:00"
        android:inputType="time"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/date"
        app:layout_constraintTop_toBottomOf="@+id/cb_tachycardia" />

    <Button
        android:id="@+id/bt_save_pressure"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="290dp"
        android:layout_height="65dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="180dp"
        android:background="@android:drawable/toast_frame"
        android:backgroundTint="#33ADC2"
        android:fontFamily="sans-serif"
        android:text="@string/save"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:typeface="sans"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/time"
        app:layout_constraintStart_toStartOf="@+id/date"
        app:layout_constraintTop_toBottomOf="@+id/date" />

</androidx.constraintlayout.widget.ConstraintLayout>